--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "class-variance-authority": "^0.7.1",
